--- a/public/style.css
+++ b/public/style.css
@@ -18,8 +18,9 @@ h2 {
   margin-top: 3em;
 }
 
-.button {
-  padding: 1px;
+.ui[class*="bottom attached"].buttons .button {
+  margin: 5px;
+  width: 40%;
 }
 
 .ui.centered.card {
@@ -39,6 +40,19 @@ h2 {
   color: white;
 }
 
+.ui.icon.button > .icon {
+  opacity: 1.0;
+  margin: 0em;
+  vertical-align: top;
+  color: yellow;
+  background-color: transparent;
+}
+
+.ui.basic.buttons .button:hover, .ui.basic.button:hover {
+  background: transparent !important;
+  box-shadow: 0px 0px 0px 1px #ffff00 inset, 0px 0px 0px 0px rgba(34, 36, 38, 0.15) inset;
+}
+
 .edit {
   color: yellow;
 }
@@ -48,5 +62,5 @@ h2 {
 }
 
 .plus {
-  opacity: .00;
+  background-color: white;
 }
