--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,13 @@ h2 {
   color: green;
 }
 
+.ui.dividing.centered.header {
+  float: left;
+  margin-left: 30px;
+  padding: 10px 10px;
+  border-bottom: solid #ff0000;
+}
+
 #main {
   margin-top: 6em;
 }
@@ -24,7 +31,7 @@ h2 {
 }
 
 .ui.centered.card {
-  background-color: black;
+  background-color: transparent;
   box-shadow: none;
 }
 
